docs: Update CHANGELOG and README for Kafka integration